Cambios visuales contact-list-page contact-list-item contact-details-page

--- a/src/app/pages/contact-details-page/contact-details-page.html
+++ b/src/app/pages/contact-details-page/contact-details-page.html
@@ -1,41 +1,89 @@
 <section>
-    <div>
-        <a routerLink="/">X</a>
-        @if (contactBack?.isFavorite) {
-        <button class="clean"  (click)="markUnmarkFavorite()">
-            <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px" viewBox="0 0 24 24"
-                width="24px">
-                <g>
+    <div class="container">
+        <div class="header">
+            <a routerLink="/">
+                <svg xmlns="http://www.w3.org/2000/svg" height="100px" viewBox="0 0 24 24" width="100px">
                     <path d="M0 0h24v24H0V0z" fill="none" />
-                    <path d="M0 0h24v24H0V0z" fill="none" />
-                </g>
-                <g>
-                    <path
-                        d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27z" />
-                </g>
-            </svg>
-        </button>
-        }
-        @else {
-        <button class="clean" (click)="markUnmarkFavorite()">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px">
-                <path d="M0 0h24v24H0V0z" fill="none" />
-                <path
-                    d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z" />
-            </svg>
-        </button>
-        }
+                    <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" />
+                </svg>
+            </a>
+            <div class="header-space">
+                @if (contactBack?.isFavorite) {
+                <button class="clean" (click)="markUnmarkFavorite()">
+                    <svg class="svg-color" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24"
+                        height="100px" viewBox="0 0 24 24" width="100px">
+                        <g>
+                            <path d="M0 0h24v24H0V0z" fill="none" />
+                            <path d="M0 0h24v24H0V0z" fill="none" />
+                        </g>
+                        <g>
+                            <path
+                                d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27z" />
+                        </g>
+                    </svg>
+                </button>
+                }
+                @else {
+                <button class="clean" (click)="markUnmarkFavorite()">
+                    <svg class="svg-color" xmlns="http://www.w3.org/2000/svg" height="100px" viewBox="0 0 24 24"
+                        width="100px">
+                        <path d="M0 0h24v24H0V0z" fill="none" />
+                        <path
+                            d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z" />
+                    </svg>
+                </button>
+                }
+                <a [routerLink]="['/', idContact() ,'edit']">
+                    <svg class="svg-color" xmlns="http://www.w3.org/2000/svg" height="100px" viewBox="0 0 24 24"
+                        width="100px">
+                        <path d="M0 0h24v24H0V0z" fill="none" />
+                        <path
+                            d="M14.06 9.02l.92.92L5.92 19H5v-.92l9.06-9.06M17.66 3c-.25 0-.51.1-.7.29l-1.83 1.83 3.75 3.75 1.83-1.83c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.2-.2-.45-.29-.71-.29zm-3.6 3.19L3 17.25V21h3.75L17.81 9.94l-3.75-3.75z" />
+                    </svg>
+                </a>
+                <button class="clean" (click)="deleteContact()">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="100px" viewBox="0 -960 960 960" width="100px"
+                        fill="red">
+                        <path
+                            d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z" />
+                    </svg>
+                </button>
+            </div>
+        </div>
+        <div class="content">
+            <img src={{contactBack?.image}} alt="" width="128px" height="128px">
+            <h1>{{contactBack?.firstName}} {{contactBack?.lastName}}</h1>
+            <h3>{{contactBack?.company}}</h3>
+            <div class="card">
+                <h2>Datos de contacto</h2>
+                <div class="item">
+                    <svg class="svg-color" xmlns="http://www.w3.org/2000/svg" height="100px" viewBox="0 0 24 24" width="100px">
+                        <path d="M0 0h24v24H0V0z" fill="none" />
+                        <path
+                            d="M6.54 5c.06.89.21 1.76.45 2.59l-1.2 1.2c-.41-1.2-.67-2.47-.76-3.79h1.51m9.86 12.02c.85.24 1.72.39 2.6.45v1.49c-1.32-.09-2.59-.35-3.8-.75l1.2-1.19M7.5 3H4c-.55 0-1 .45-1 1 0 9.39 7.61 17 17 17 .55 0 1-.45 1-1v-3.49c0-.55-.45-1-1-1-1.24 0-2.45-.2-3.57-.57-.1-.04-.21-.05-.31-.05-.26 0-.51.1-.71.29l-2.2 2.2c-2.83-1.45-5.15-3.76-6.59-6.59l2.2-2.2c.28-.28.36-.67.25-1.02C8.7 6.45 8.5 5.25 8.5 4c0-.55-.45-1-1-1z" />
+                    </svg>
+                    <p>{{contactBack?.number}}</p>
+                </div>
+                <div class="item">
+                    <svg class="svg-color" xmlns="http://www.w3.org/2000/svg" height="100px" viewBox="0 0 24 24" width="100px">
+                        <path d="M0 0h24v24H0V0z" fill="none" />
+                        <path
+                            d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6zm-2 0l-8 4.99L4 6h16zm0 12H4V8l8 5 8-5v10z" />
+                    </svg>
+                    <p>{{contactBack?.email}}</p>
+                </div>
+                <div class="item">
+                    <svg class="svg-color" xmlns="http://www.w3.org/2000/svg" height="100px" viewBox="0 0 24 24" width="100px">
+                        <path d="M0 0h24v24H0V0z" fill="none" />
+                        <path
+                            d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zM7 9c0-2.76 2.24-5 5-5s5 2.24 5 5c0 2.88-2.88 7.19-5 9.88C9.92 16.21 7 11.85 7 9z" />
+                        <circle cx="12" cy="9" r="2.5" />
+                    </svg>
 
-        <a [routerLink]="['/', idContact() ,'edit']">Editar</a>
-    </div>
-    <div>
-        <img src={{contactBack?.image}} alt="">
-        <p>Nombre: {{contactBack?.firstName}}</p>
-        <p>Apellido: {{contactBack?.lastName}}</p>
-        <p>Compañia: {{contactBack?.company}}</p>
-        <p>Numero: {{contactBack?.number}}</p>
-        <p>Email: {{contactBack?.email}}</p>
-        <p>Dirección: {{contactBack?.address}}</p>
-        <p>Contacto ID: {{idContact()}}</p>
+                    <p>{{contactBack?.address}}</p>
+                </div>
+                <p class="id-contact">ID: {{idContact()}}</p>
+            </div>
+        </div>
     </div>
 </section>
