--- a/src/app/pages/new-edit-contact-page/new-edit-contact-page.scss
+++ b/src/app/pages/new-edit-contact-page/new-edit-contact-page.scss
@@ -97,3 +97,9 @@ p{
     display: flex;
     justify-content: center;
 }
+
+svg{
+    max-width: 32px;
+    max-height: 32px;
+    margin-bottom: 10px;
+}
