--- a/src/app/components/contact-list-item/contact-list-item.html
+++ b/src/app/components/contact-list-item/contact-list-item.html
@@ -1,29 +1,59 @@
-<div>
+<div class="card">
+    <a [routerLink]="['/', contact().id, 'details']">
+        <div class="header">
+            <div>
 
-    <a [routerLink]="['/', contact().id, 'details']">Contacto N° {{index()+1}} {{contact().firstName}} {{contact().lastName}}</a>
-    @if (contact().isFavorite) {
-        <button class="clean"  (click)="markUnmarkFavorite()">
-            <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px" viewBox="0 0 24 24"
-            width="24px">
-            <g>
-                <path d="M0 0h24v24H0V0z" fill="none" />
-                <path d="M0 0h24v24H0V0z" fill="none" />
-            </g>
-            <g>
-                <path
-                d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27z" />
-            </g>
-        </svg>
-        </button>
-    }
-    @else {
+                <img src="{{contact().image}}" alt="" width="24px" height="24px">
+            </div>
+            <div class="caja">
+                <div class="text-align-left">
+                    {{contact().firstName}} {{contact().lastName}}
+                </div>
+            </div>
+            <div class="caja">
+                <div class="text-align-left">
+                    {{contact().number}}
+                </div>
+            </div>
+        </div>
+    </a>
+    <div class="tools">
+        @if (contact().isFavorite) {
         <button class="clean" (click)="markUnmarkFavorite()">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px">
-                <path d="M0 0h24v24H0V0z" fill="none" />
-                <path
-                d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z" />
+            <svg class="svg-color" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="100px"
+                viewBox="0 0 24 24" width="100px">
+                <g>
+                    <path d="M0 0h24v24H0V0z" fill="none" />
+                    <path d="M0 0h24v24H0V0z" fill="none" />
+                </g>
+                <g>
+                    <path
+                        d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27z" />
+                </g>
             </svg>
         </button>
-    }
-    <button (click)="contactsService.deleteContact(contact().id)">borrar</button>
+        }
+        @else {
+        <button class="clean" (click)="markUnmarkFavorite()">
+            <svg class="svg-color" xmlns="http://www.w3.org/2000/svg" height="100px" viewBox="0 0 24 24" width="100px">
+                <path d="M0 0h24v24H0V0z" fill="none" />
+                <path
+                    d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z" />
+            </svg>
+        </button>
+        }
+        <a [routerLink]="['/', contact().id ,'edit']">
+            <svg class="svg-color" xmlns="http://www.w3.org/2000/svg" height="100px" viewBox="0 0 24 24" width="100px">
+                <path d="M0 0h24v24H0V0z" fill="none" />
+                <path
+                    d="M14.06 9.02l.92.92L5.92 19H5v-.92l9.06-9.06M17.66 3c-.25 0-.51.1-.7.29l-1.83 1.83 3.75 3.75 1.83-1.83c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.2-.2-.45-.29-.71-.29zm-3.6 3.19L3 17.25V21h3.75L17.81 9.94l-3.75-3.75z" />
+            </svg>
+        </a>
+        <button class="clean" (click)="deleteContact()">
+            <svg xmlns="http://www.w3.org/2000/svg" height="100px" viewBox="0 -960 960 960" width="100px" fill="red">
+                <path
+                    d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z" />
+            </svg>
+        </button>
+    </div>
 </div>
