--- a/src/app/components/contact-list-item/contact-list-item.scss
+++ b/src/app/components/contact-list-item/contact-list-item.scss
@@ -1,9 +1,67 @@
-.clean {
-  all: unset;        
-  cursor: pointer;
-  display: inline-block;
+.card {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    box-sizing: border-box;
 }
 
-svg{
+.card:hover {
+    background-color: red;
+    background-color: var(--contact-item-hover-color)
+}
+
+img {
+    border: solid 1px black;
+    margin-right: 16px;
+    margin-left: 16px;
+}
+
+a {
+    all: unset;
+    cursor: pointer;
+}
+
+
+
+.header{
+    display: flex;
+    align-items: center;
+    width: 500px;
+  box-sizing: border-box;
+  height: 50px;
+}
+
+.caja {
+  flex: 1;                /* cada hijo ocupa el mismo ancho */
+  text-align: center;
+}
+svg {
+    max-width: 32px;
+    max-height: 32px;
+}
+
+.svg-color {
     fill: var(--nav-bar-left-color);
 }
+
+
+.clean {
+    all: unset;
+    cursor: pointer;
+    display: inline-block;
+}
+
+
+
+.text-align-left{
+    text-align: left;
+}
+.tools {
+    overflow: hidden;
+    padding-right: 16px;
+}
+
+.caja:nth-child(1) { flex: 2; } 
+.caja:nth-child(2) { flex: 1; }
+.caja:nth-child(3) { flex: 1; }
