--- a/src/app/pages/contact-details-page/contact-details-page.scss
+++ b/src/app/pages/contact-details-page/contact-details-page.scss
@@ -1,5 +1,19 @@
-section {
-    height: 100vh;
+section{
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+
+.container{
+    display: flex;
+    flex-direction: column;
+    background-color: var(--background-secundary-color);
+    border-radius: var(--border-radius);
+    width: 100%;
+    margin: 16px;
+    padding: 16px;
+    box-shadow: 0px 0px 10px 3px #dddddd
 }
 
 .clean {
@@ -9,5 +23,71 @@ section {
 }
 
 svg{
+    max-width: 32px;
+    max-height: 32px;
+}
+
+.svg-color{
     fill: var(--nav-bar-left-color);
 }
+
+.header-space{
+    display: flex;
+    gap: 10px;
+    
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 16px;
+
+}
+
+
+.content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+img{
+    margin-bottom: 16px;
+}
+
+h1{
+    font-size: var(--font-size-h1);
+}
+h3{
+    font-size: var(--font-size-h2);
+    margin-bottom: 16px;
+}
+h2{
+    font-size: var(--font-size-h2);
+    text-align: center;
+    margin-bottom: 16px;
+
+}
+
+.card{
+    border-top: solid 1px var(--nav-bar-left-color);
+    padding-top: 16px;
+
+}
+
+.item{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 12px;
+}
+.item svg{
+    margin-right: 10px;
+}
+
+.id-contact{
+    text-align: center;
+    font-size: 12px;
+}
+
+
