--- a/src/app/pages/contact-list-page/contact-list-page.scss
+++ b/src/app/pages/contact-list-page/contact-list-page.scss
@@ -1,12 +1,11 @@
-
-section{
+section {
     display: flex;
     width: 100%;
     height: 100%;
 }
 
 
-.card{
+.card {
     display: flex;
     flex-direction: column;
     background-color: var(--background-secundary-color);
@@ -17,20 +16,21 @@ section{
     box-shadow: 0px 0px 10px 3px #dddddd
 }
 
-.contacts-box{
+.contacts-box {
     transition: all 0.3s ease;
 }
 
 
-h1{
+h1 {
     font-size: var(--font-size-h1);
     margin-bottom: 32px;
 }
-p{
+
+p {
     font-size: var(--font-size-h2);
 }
 
-.no-contacts-div{
+.no-contacts-div {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,35 +39,55 @@ p{
 }
 
 
-.search-container{
-    display: flex;
-    align-items: center;
-}
 
 .add-contact-button {
     position: absolute;
-    bottom: 15px;
-    right: 20px;
+    bottom: 32px;
+    right: 32px;
     z-index: 10;
     background-color: var(--nav-bar-left-color);
     border-radius: var(--border-radius);
     padding: 8px;
     fill: var(--font-button-primary-color);
-} 
+}
 
-.router-outlet-box{
-    width: 50%;
-    height: 50%;
-    transition: all 10s ease;
-    margin: 25%;
+.add-contact-button:hover {
+    background-color: var(--button-primary-hover-color);
+}
+
+
+.search-container {
+    display: flex;
+    align-items: center;
+    padding: 8px 16px;
 
 }
 
-.full {
-  flex: 1 1 100%;
+svg {
+    max-width: 32px;
+    max-height: 32px;
 }
 
-.half {
-  flex: 1 1 50%;
+input {
+    background: transparent;
+    border: none;
+    padding: 4px;
+    background-color: var(--input-bar-color);
+    width: 25%;
+    box-sizing: border-box;
+    box-shadow: 0 2px var(--button-secundary-color);
+    transition: box-shadow 0.3s ease;
+    font-size: 16px;
+
+}
+
+input::placeholder {
+    font-size: var(--font-size);
+}
+
+input:focus {
+    outline: none;
+    box-shadow: 0 2px var(--button-primary-color);
+
 }
 
