--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,7 +66,7 @@ a{
 	--button-secundary-color: #dcf1ee;
 	--button-disabled-color: #01807562;
     // --boton-color: #B9B28A;
-	--nav-bar-top-color: #f0f4f7;
+	--contact-item-hover-color: #f0f4f7;
 	--nav-bar-left-color: #00998f;
 	--font-nav-divisor-color: rgba(220, 241, 238, 0.7);
 	--input-text-bar: #fafafa;
