--- a/src/app/components/contact-list-item/contact-list-item.scss
+++ b/src/app/components/contact-list-item/contact-list-item.scss
@@ -24,18 +24,19 @@ a {
 
 
 
-.header{
+.header {
     display: flex;
     align-items: center;
     width: 500px;
-  box-sizing: border-box;
-  height: 50px;
+    box-sizing: border-box;
+    height: 50px;
 }
 
 .caja {
-  flex: 1;                /* cada hijo ocupa el mismo ancho */
-  text-align: center;
+    flex: 1;
+    text-align: center;
 }
+
 svg {
     max-width: 32px;
     max-height: 32px;
@@ -54,14 +55,58 @@ svg {
 
 
 
-.text-align-left{
+.text-align-left {
     text-align: left;
 }
+
 .tools {
     overflow: hidden;
     padding-right: 16px;
 }
 
-.caja:nth-child(1) { flex: 2; } 
-.caja:nth-child(2) { flex: 1; }
-.caja:nth-child(3) { flex: 1; }
+.caja:nth-child(1) {
+    flex: 2;
+}
+
+.caja:nth-child(2) {
+    flex: 1;
+}
+
+.caja:nth-child(3) {
+    flex: 1;
+}
+
+
+@media (max-width: 480px) {
+    section {
+        height: 100vh;
+        overflow-x: hidden;
+        overflow-y: hidden;
+        width: 100%;
+    }
+
+    .card {
+        height: 100%;
+        width: 100%;
+
+
+    }
+
+    .header {
+        width: 100%;
+    }
+
+    a {
+        font-size: 12px;
+    }
+
+    svg {
+        max-width: 24px;
+        max-height: 24px;
+    }
+
+    .caja {
+        width: 120px;
+    }
+
+}
