--- a/src/app/pages/contact-list-page/contact-list-page.scss
+++ b/src/app/pages/contact-list-page/contact-list-page.scss
@@ -73,7 +73,7 @@ input {
     border: none;
     padding: 4px;
     background-color: var(--input-bar-color);
-    width: 25%;
+    width: 320px;
     box-sizing: border-box;
     box-shadow: 0 2px var(--button-secundary-color);
     transition: box-shadow 0.3s ease;
@@ -91,3 +91,27 @@ input:focus {
 
 }
 
+@media (max-width: 480px) {
+  section {
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: hidden;  
+    width: 100%;
+  }
+
+  .container{
+    height: 100%;
+    width: 100%;
+
+    
+}
+
+    input{
+            font-size: 12px;
+    }
+
+    svg {
+    max-width: 24px;
+    max-height: 24px;
+}
+}
