media querys, terminado

--- a/src/app/components/contact-list-item/contact-list-item.scss
+++ b/src/app/components/contact-list-item/contact-list-item.scss
@@ -106,7 +106,15 @@ svg {
     }
 
     .caja {
-        width: 120px;
+        width: 110px;
+    }
+    .tools{
+        padding-right: 0;
+    }
+
+    img{
+        margin-left: 0;
     }
 
 }
+
