--- a/src/app/layouts/nav-bar-left-layout/nav-bar-left-layout.html
+++ b/src/app/layouts/nav-bar-left-layout/nav-bar-left-layout.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="nav-bar-section">
+    <div class="nav-bar-section" [class.menu-no-hidden]="menuHidden">
         <div>
             <h1>Agenda</h1>
         </div>
@@ -47,6 +47,20 @@
         <div class="button-container">
             <button (click)="showLogoutModal()">Cerrar sesión</button>
         </div>
+        <button class="menu-button clean" (click)="toggleMenu()">
+            @if (menuHidden) {
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px">
+                <path d="M0 0h24v24H0V0z" fill="none" />
+                <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" />
+            </svg>
+
+            }
+            @else {
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px">
+                <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
+            </svg>
+            }
+        </button>
     </div>
     <div class="main-section">
         <router-outlet />
