--- a/src/app/pages/new-edit-contact-page/new-edit-contact-page.html
+++ b/src/app/pages/new-edit-contact-page/new-edit-contact-page.html
@@ -21,9 +21,6 @@
                     <label for="first-name">Nombre*</label>
                     <input type="text" name="firstName" id="first-name" ngModel required="true" maxlength="20"
                         minlength="1" #firstName="ngModel">
-                    @if (firstName.dirty && firstName.invalid) {
-                    <p class="error">El nombre es obligatorio</p>
-                    }
                 </div>
                 <div>
                     <label for="last-name">Apellido</label>
@@ -33,27 +30,28 @@
                     <label for="number">Telefono*</label>
                     <input type="text" name="number" id="number" ngModel maxlength="50" required="true" minlength="4"
                         #number="ngModel">
-                    @if (number.dirty && number.invalid) {
-                    <p class="error">El telefono es obligatorio y tiene que tener al menos 4 caracteres y no mas de 50
+                    </div>
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email" ngModel maxlength="40" #email="ngModel">
+                    </div>
+                    <div>
+                        <label for="address">Dirección</label>
+                        <input type="text" name="address" id="address" ngModel maxlength="50" #address="ngModel">
+                    </div>
+                    <div>
+                        <label for="company">Companía</label>
+                        <input id="company" name="company" type="text" ngModel minlength="2" #company="ngModel">
+                    </div>
+                    <div>
+                        <label for="image">URL Imagen</label>
+                        <input id="image" name="image" type="text" ngModel minlength="10" #image="ngModel">
+                    </div>
+                    
+                    @if (number.dirty && number.invalid || firstName.dirty && firstName.invalid) {
+                    <p class="error">* Complete los campos obligatorios
                     </p>
                     }
-                </div>
-                <div>
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" ngModel maxlength="40" #email="ngModel">
-                </div>
-                <div>
-                    <label for="address">Dirección</label>
-                    <input type="text" name="address" id="address" ngModel maxlength="50" #address="ngModel">
-                </div>
-                <div>
-                    <label for="company">Companía</label>
-                    <input id="company" name="company" type="text" ngModel minlength="2" #company="ngModel">
-                </div>
-                <div>
-                    <label for="image">URL Imagen</label>
-                    <input id="image" name="image" type="text" ngModel minlength="10" #image="ngModel">
-                </div>
                 <div class="spinner">
                     @if (backRequest) {
                     <app-spinner />
