--- a/src/app/components/contact-list-item/contact-list-item.scss
+++ b/src/app/components/contact-list-item/contact-list-item.scss
@@ -15,6 +15,8 @@ img {
     border: solid 1px black;
     margin-right: 16px;
     margin-left: 16px;
+    border: 0;
+    border-radius: 100px;
 }
 
 a {
