--- a/src/app/layouts/nav-bar-left-layout/nav-bar-left-layout.scss
+++ b/src/app/layouts/nav-bar-left-layout/nav-bar-left-layout.scss
@@ -14,8 +14,16 @@ section{
     left: -216px;
 }
 
+.justifiy-content-sb{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
 h1{
-    font-size: 24px;
+    font-size: 32px;
 }
 
 .nav-container{
@@ -40,6 +48,7 @@ nav {
     gap: 10px;
     padding: 10px;
     border-radius: var(--border-radius);
+    color: var(--font-button-primary-color);
     fill: var(--font-button-primary-color);
     transition: background-color 0.1s ease;
 }
@@ -60,6 +69,24 @@ nav {
 .main-section{
     width: 100%;
     height: 100%;
+}
+
+
+
+.loguot-button{
+    display: flex;
+    justify-content: center;
+    background-color: (--button-secundary-color);
+    gap: 10px;
+    padding: 10px;
+    border-radius: var(--border-radius);
+    transition: background-color 0.1s ease;
+    color:var(--nav-bar-left-color);
+    width: 100%;
+    border: 0;
+}
+.loguot-button:hover{
+    background-color: var(--button-secundary-color);
 }
 
 .menu-button {
