--- a/src/app/pages/contact-list-page/contact-list-page.scss
+++ b/src/app/pages/contact-list-page/contact-list-page.scss
@@ -13,12 +13,10 @@ section {
     width: 100%;
     margin: 16px;
     padding: 16px;
-    box-shadow: 0px 0px 10px 3px #dddddd
+    box-shadow: 0px 0px 10px 3px #dddddd;
 }
 
-.contacts-box {
-    transition: all 0.3s ease;
-}
+
 
 
 h1 {
@@ -28,6 +26,7 @@ h1 {
 
 p {
     font-size: var(--font-size-h2);
+    margin-bottom: 16px;
 }
 
 .no-contacts-div {
@@ -90,6 +89,25 @@ input:focus {
     box-shadow: 0 2px var(--button-primary-color);
 
 }
+
+.spinner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.add-first-contact-button{
+    color: var(--font-button-primary-color);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+    border-radius: var(--border-radius);
+    background-color: var(--nav-bar-left-color);
+    transition: background-color 0.1s ease;
+}
+
 
 @media (max-width: 480px) {
   section {
