--- a/src/app/layouts/nav-bar-left-layout/nav-bar-left-layout.scss
+++ b/src/app/layouts/nav-bar-left-layout/nav-bar-left-layout.scss
@@ -113,6 +113,15 @@ nav {
     }
 }
 
+p{
+    text-align: center;
+    font-size: 12px;
+    margin-bottom: 8px;
+}
+
+.width100{
+    width: 100%;
+}
 
 @media (max-width: 480px) {
   .nav-bar-section {
